--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,14 @@ body {
   height: 100vh;
   width:100vw;
   background-color: rgb(196, 254, 254) !important;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html{
+  font-size: 1rem;
 }
